--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,10 @@
 
 title: knoxjimbo
 email: knoxjimbo@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-a blog about becoming a web developer
+description: a blog about becoming a web developer # this means to ignore newlines until "baseurl:"
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 production_url: http://knoxjimbo.github.io.com/blog
-BASE_PATH: http:/knoxjimbo.com/blog
+BASE_PATH: http://knoxjimbo.com/blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  knoxjimbo
 
